# stoneage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: design_cl36.md
examples/: be10_exposure_age.py  calibration_production_rate.py  full_workflow_scottish_highlands.py  samples_martha_vineyard.csv  samples_scottish_highlands.csv
stoneage/: __init__.py  atmosphere.py  calculator.py  cl36_nuclear.py  cl36_production.py  constants.py  corrections.py  cutoff_rigidity.py  input_parser.py  scaling.py  summarize.py  workflow.py
stoneage/data/: LSDn2015_N10quartz.mat  LSDn2015_N14quartz.mat  LSDn2015_N21quartz.mat  LSDn2015_N26quartz.mat  LSDn2015_N3pxol.mat  LSDn2015_N3quartz.mat  LSDn2015_grid.mat  LiftonS2015.mat  Lm2015_all.mat  PavonDip.mat
tests/: test_cl36.py  test_coverage_gaps.py  test_edge_cases.py  test_functional.py  test_online_validation.py  test_physics.py
