[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stoneage"
version = "3.0.2"
description = "Python port of Balco v3 cosmogenic nuclide exposure age calculator"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
stoneage = ["data/*.mat"]
